task for tomorrow updated

--- a/readme
+++ b/readme
@@ -1,7 +1,17 @@
-task for tomorrow :
+### task for tomorrow : [done]
 
     database model for image and also edit existing model to fit new features [done]
     sync image uploader with client [done]
-    make some design upgrades on client
+    make some design upgrades on client [done]
+
+
+### task for tomorrow :
+    
+    design upgrades on the dashboard
+    auto routing on create auth pages 
+    overall improve the auth page  
+    do some ux improvements
     mobile responsive client
+    look for improvements
+    tests
     deploy
